fix align center causes other partner area to center

--- a/wp-content/themes/masterstudy-child/style.css
+++ b/wp-content/themes/masterstudy-child/style.css
@@ -72,12 +72,10 @@ display: none;
 }
 
 /* Affiliate WP Buttons Styles */
-#affwp-affiliate-dashboard {
-    text-align: center;
-}
 #affwp-affiliate-dashboard #affwp-affiliate-dashboard-tabs {
     overflow: hidden;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
 }
 #affwp-affiliate-dashboard #affwp-affiliate-dashboard-tabs li {
     padding: 0 !important;
@@ -101,7 +99,7 @@ display: none;
     font-size: 14px;
 }
 
-@media only screen and (max-width: 1100px) and (min-width: 992px) {
+@media only screen and (max-width: 1100px) and (min-width: 991px) {
     #affwp-affiliate-dashboard #affwp-affiliate-dashboard-tabs .affwp-affiliate-dashboard-tab a {
         padding: 10px 12px;
         font-size: 13px;
@@ -109,6 +107,9 @@ display: none;
 }
 
 @media only screen and (max-width: 991px) {
+    #affwp-affiliate-dashboard #affwp-affiliate-dashboard-tabs {
+        display: inherit;
+    }
     #affwp-affiliate-dashboard #affwp-affiliate-dashboard-tabs li {
         padding: 0 !important;
         float: left;
